--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,12 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": ">=8.1",
         "ext-json": "*",
         "funeralzone/valueobjects": "^0.5",
         "jenssegers/agent": "^2.6",
-        "laravel/framework": "^7.0 || ^8.0 || ^9.0",
-        "osiset/basic-shopify-api": "^9.0 || <=10.0.5"
+        "laravel/framework": "^8.0 || ^9.0",
+        "osiset/basic-shopify-api": "^9.0 || ^10.0.6"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.8",
